--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+.link {
+  @apply hover:underline hover:text-zinc-950 transition;
+}
+
+.button {
+  @apply px-4 py-2 bg-zinc-950 text-white rounded-full hover:bg-zinc-800 transition;
+}
