--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");
 @import "tailwindcss";
+
+@theme {
+  --font-lexend: "Lexend";
+}
 
 .link {
   @apply hover:underline hover:text-zinc-950 transition;
