--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,10 @@
   @apply gap-1 flex flex-col w-full;
 }
 
+.input div {
+  @apply flex justify-between items-center text-xs text-red-400;
+}
+
 .input label {
   @apply px-3 gap-2 text-zinc-700 text-xs justify-center;
 }
