--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
 }
 
 .button {
-  @apply flex px-4 py-2 bg-zinc-950 text-white rounded-full hover:bg-zinc-800 transition;
+  @apply flex px-4 py-2 bg-zinc-950 text-white rounded-full hover:bg-zinc-800 transition cursor-pointer;
 }
 
 .input {
